[workspace]
members = ["cli", "client", "doomfront", "engine", "server", "vzscript"]
default-members = ["engine", "client"]
resolver = "2" # Needed for WGPU and Bevy.

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 4

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
ariadne = "0.1.5"
arrayvec = { version = "0.7.2", features = ["serde"] }
bevy = { version = "0.10.1", default-features = false }
bevy_egui = "0.20.1"
bevy_quinnet = "0.4.0"
bitflags = "1.3.2"
bitvec = { version = "1.0.1", features = ["serde"] }
bytemuck = { version = "1.11.0", features = ["derive"] }
byteorder = "1.4.3"
chumsky = "1.0.0-alpha.4"
clap = { version = "4.0.32", features = ["derive"] }
# Same version as `kira`. Specified here since it's needed by MIDI code.
cpal = "0.15.1"
cranelift = "0.96.1"
cranelift-jit = "0.96.1"
cranelift-module = "0.96.1"
cranelift-interpreter = "0.96.1"
crossbeam = "0.8.2"
dashmap = { version = "5.4.0", features = ["rayon", "serde"] }
fasthash = "0.4.0"
fixed = "1.23.0"
fluidlite = "0.2.1"
formatx = "0.2.1"
# Same version as specified by `bevy_math`. Specified here
# to add the `approx` and `debug-glam-assert` feature flags.
glam = { version = "0.23.0", features = [
	"approx",
	"bytemuck",
	"serde",
	"debug-glam-assert",
] }
globset = "0.4.10"
home = "0.5.4"
image = { version = "0.24.5", default-features = false, features = [
	"dds",
	"jpeg",
	"png",
	"tga",
] }
impl-trait-for-tuples = "0.2.2"
indexmap = { version = "1.9.2", features = ["rayon", "serde"] }
indoc = "2.0.0"
itertools = "0.10.5"
kira = "0.7.3"
logos = "0.13.0"
md5 = "0.7.0"
memoffset = "0.8.0"
naga = "0.11.0"
nanorand = "0.7.0"
nodi = "0.19.2"
once_cell = "1.17.0"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
paste = "1.0.11"
pollster = "0.3.0"
raw-cpuid = "10.6.1"
rayon = "1.6.1"
regex = "1.7.1"
rfd = "0.11.1"
rowan = "0.15.11"
serde = { version = "1.0.152", features = ["derive"] }
sha3 = "0.10.6"
slotmap = { version = "1.0.6", features = ["serde"] }
smallvec = { version = "1.10.0", features = ["const_generics", "const_new"] }
smartstring = { version = "1.0.1", features = ["serde"] }
time = { version = "0.3.20", features = ["formatting", "serde"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"
triangulate = "0.2.0"
unicode-ident = "1.0.6"
walkdir = "2.3.2"
zip = { git = "https://github.com/mcandre/zip.git", rev = "79dba4b6" }
