[workspace]
members = ["crates/mus2midi", "crates/wadload"]
default-members = ["crates/wadload"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/jerome-trc/viletech"

[profile.release]
codegen-units = 4
lto = true
opt-level = 3
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
debug = true
lto = "thin"
strip = false

[workspace.dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
bytemuck = { version = "1.13.0", features = ["derive"] }
byteorder = "1.4.3"
midly = "0.5.2"
serde = { version = "1.0.163", features = ["derive"] }
# Build only
bindgen = "0.69.4"
cbindgen = "0.26.0"
cc = { version = "1.0.83", features = ["parallel"] }
# Developer only
criterion = "0.5.1"
md5 = "0.7.0"
