[package]
name = "acsvm-sys"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-development"]
description = "FFI bindings to the ACSVM library"
homepage = "https://github.com/jerome-trc/viletech/tree/master/acsvm-sys"
keywords = ["doom", "gamedev"]
publish = false
repository.workspace = true

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
