[package]
name = "viletech-bench"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = []
description = "VileTech-related (but third-party) microbenchmarks"
homepage = "https://github.com/jerome-trc/viletech/tree/master/bench"
keywords = []
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[lib]
bench = false

[[bench]]
name = "conc_ds"
harness = false

[[bench]]
name = "arc_swap"
harness = false

[[bench]]
name = "deref"
harness = false

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "hybrid_rc"
harness = false

[[bench]]
name = "immut"
harness = false

[[bench]]
name = "locks"
harness = false

[[bench]]
name = "prng"
harness = false

[[bench]]
name = "reclamation"
harness = false

[[bench]]
name = "rt_poly"
harness = false

[[bench]]
name = "slotmap"
harness = false

[[bench]]
name = "strings"
harness = false

[[bench]]
name = "threading"
harness = false

[dependencies]
util = { package = "viletech-utils", path = "../utils", features = ["archery"] }

[dev-dependencies]
criterion.workspace = true

append-only-vec = "0.1.3"
arc-swap = "1.6.0"
boxcar = "0.2.3"
crossbeam.workspace = true
haphazard = "0.1.5"
hybrid-rc = "0.6.0"
im = "15.1.0"
im-rc = "15.1.0"
md5 = "0.7.0"
nanorand.workspace = true
parking_lot.workspace = true
rand_core = "0.6.4"
rayon.workspace = true
rpds = "1.0.1"
rustc-hash.workspace = true
seize = "0.2.5"
sfmt = "0.7.0"
sharded-slab = "0.1.4"
slotmap.workspace = true
