[package]
name = "viletech-cli"
version = "0.0.0"
edition.workspace = true

categories = ["game-engines", "game-development"]
description = "VileTech Engine command line utilities"
keywords = ["bevy", "doom", "gamedev", "gzdoom", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[dependencies]
acs = { package = "viletech-acs", path = "../acs" }
doomfront = { path = "../doomfront", features = [
	"ser_de",
	"acs",
	"eternity",
	"umapinfo",
	"zdoom",
] }
level = { package = "subterra", path = "../level" }
util = { package = "viletech-utils", path = "../utils", features = ["ser_de"] }
vfs = { package = "viletech-fs", path = "../vfs", features = ["egui", "ser_de"] }
vzs = { package = "vzscript", path = "../vzscript" }
wadload.path = "../wadload"

clap.workspace = true
indoc.workspace = true
