[package]
name = "viletech-cli"
version = "0.0.0"
edition.workspace = true

categories = ["game-engines", "game-development"]
description = "VileTech Engine command line utilities"
keywords = ["bevy", "doom", "gamedev", "cli", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[[bin]]
name = "viletools"
path = "src/main.rs"

[dependencies]
acs = { package = "viletech-acs", path = "../acs" }
doomfront = { path = "../doomfront", features = [
	"serde",
	"acs",
	"eternity",
	"umapinfo",
	"zdoom",
] }
level = { package = "subterra", path = "../level" }
mus = { package = "mus2midi", path = "../mus2midi" }
util = { package = "viletech-utils", path = "../utils", features = ["serde"] }
vfs = { package = "viletech-fs", path = "../vfs", features = ["egui", "serde"] }
lith = { package = "lithscript", path = "../lithscript" }
wadload.path = "../wadload"

clap.workspace = true
indoc.workspace = true
