[package]
name = "viletech-cli"
version = "0.0.0"
edition.workspace = true

categories = ["game-engines", "game-development"]
description = "VileTech Engine command line utilities"
keywords = ["bevy", "doom", "gamedev", "cli", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[[bin]]
name = "viletools"
path = "src/main.rs"

[dependencies]
acs = { package = "viletech-acs", path = "../acs" }
data = { package = "subterra", path = "../subterra", features = ["serde"] }
doomfront = { path = "../doomfront", features = [
	"serde",
	"acs",
	"eternity",
	"umapinfo",
	"zdoom",
] }
lith = { package = "lithica", path = "../lith" }
mus = { package = "mus2midi", path = "../mus2midi" }
util = { package = "viletech-utils", path = "../utils", features = ["serde"] }
vfs = { package = "viletech-fs", path = "../vfs", features = ["serde"] }
wadload.path = "../wadload"

clap.workspace = true
indoc.workspace = true
