[package]
name = "viletech-client"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-engines", "game-development"]
description = "Client for the VileTech Engine"
homepage = "https://github.com/jerome-trc/viletech/tree/master/client"
keywords = ["bevy", "doom", "gamedev", "gzdoom", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[dependencies.bevy]
workspace = true
default-features = false
features = [
	# Default
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_gilrs",
	"bevy_gltf",
	"bevy_pbr",
	"bevy_render",
	"bevy_scene",
	"bevy_sprite",
	"bevy_winit",
	"animation",
	"filesystem_watcher",
	"x11",

	"hdr",
	"png",
	"vorbis",

	# Optional
	"serialize",

	"bmp",
	"ktx2",
	"tga",

	"flac",
	"mp3",
	"wav",
]

[dependencies]
viletech = { path = "../engine" }

bevy_egui.workspace = true
bitflags.workspace = true
clap.workspace = true
crossbeam.workspace = true
indoc.workspace = true
kira.workspace = true
nanorand.workspace = true
parking_lot.workspace = true
