[package]
name = "viletech"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-engines", "game-development"]
description = "Client for the VileTech Engine"
homepage = "https://github.com/jerome-trc/viletech/tree/master/client"
keywords = ["bevy", "doom", "gamedev", "game-engine", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[dependencies.bevy]
workspace = true
default-features = false
features = [
	# Default
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_gizmos",
	"bevy_pbr",
	"bevy_render",
	"bevy_scene",
	"bevy_sprite",
	"bevy_winit",
	"x11",
	"png",
	"tonemapping_luts",

	# TODO: Disable this for release builds.
	"dynamic_linking"
]

[dependencies]
viletech = { package = "viletech-engine", path = "../engine" }

bevy_egui.workspace = true
bitflags.workspace = true
clap.workspace = true
egui_extras.workspace = true
indoc.workspace = true
parking_lot.workspace = true
winit.workspace = true
