[package]
name = "doomfront"
version = "0.0.0"
edition = "2021"

authors = ["jerome-trc"]
categories = ["encoding", "game-development", "parser-implementations"]
description = "Frontends for Doom DSLs"
homepage = "https://github.com/jerome-trc/viletech/tree/master/doomfront"
keywords = ["doom", "dsl", "encoding", "gamedev", "parser"]
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/jerome-trc/viletech/"

[features]
default = []

ser_de = ["serde", "rowan/serde1"]

acs = []
eternity = []
umapinfo = []
zdoom = []

[dependencies]
chumsky = { workspace = true }
logos = { workspace = true }
rowan = { workspace = true }
serde = { workspace = true, optional = true }
