[package]
name = "doomfront"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["encoding", "game-development", "parser-implementations"]
description = "Frontends for Doom DSLs"
homepage = "https://github.com/jerome-trc/viletech/tree/master/doomfront"
keywords = ["doom", "dsl", "encoding", "gamedev", "parser"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[features]
default = []

parallel = ["crossbeam", "dashmap", "parking_lot", "rayon"]
serde = ["dep:serde", "rowan/serde1"]

acs = []
eternity = []
umapinfo = []
zdoom = []

[dependencies]
chumsky.workspace = true
crossbeam = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true, features = ["raw-api"] }
logos.workspace = true
hashbrown.workspace = true
parking_lot = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rowan.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }
smallvec.workspace = true

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
