[package]
name = "viletech"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-engines", "game-development"]
description = "id Tech 1 source port built on top of Bevy"
homepage = "https://github.com/jerome-trc/viletech/tree/master/engine"
keywords = ["bevy", "doom", "gamedev", "game-engine", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[dependencies.bevy]
workspace = true
default-features = false
features = [
	# Default
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_gltf",
	"bevy_pbr",
	"bevy_render",
	"bevy_scene",
	"bevy_sprite",
	"bevy_winit",
	"x11",
	"png",

	# TODO: Disable this for release builds.
	"dynamic_linking",
]

[dependencies]
acs = { package = "viletech-acs", path = "../acs" }
data = { package = "viletech-data", path = "../data", features = ["serde"] }
doomfront = { path = "../doomfront", features = [
	"serde",
	"acs",
	"eternity",
	"umapinfo",
	"zdoom",
] }
lith = { package = "lithica", path = "../lith" }
mus = { package = "mus2midi", path = "../mus2midi" }
util = { package = "viletech-utils", path = "../utils", features = [
	"serde",
	"sparseset",
] }
vfs = { package = "viletech-fs", path = "../vfs", features = ["egui", "serde"] }
wadload.path = "../wadload"

arrayvec.workspace = true
ariadne.workspace = true
bevy_egui.workspace = true
bitflags.workspace = true
bitvec.workspace = true
bytemuck.workspace = true
byteorder.workspace = true
cpal.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
fixed.workspace = true
fluidlite.workspace = true
glam.workspace = true
globset.workspace = true
home.workspace = true
image.workspace = true
indexmap.workspace = true
indoc.workspace = true
kira.workspace = true
memoffset.workspace = true
nanorand.workspace = true
nodi.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
pollster.workspace = true
raw-cpuid.workspace = true
rayon.workspace = true
regex.workspace = true
rfd.workspace = true
rustc-hash.workspace = true
serde.workspace = true
sha3.workspace = true
smallvec.workspace = true
smartstring.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
triangulate.workspace = true
walkdir.workspace = true
xml-rs.workspace = true
zip.workspace = true

[[bench]]
name = "bench"
harness = false

[build-dependencies]
sha3.workspace = true
time.workspace = true
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
criterion.workspace = true
