[package]
name = "subterra"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["game-engines", "game-development"]
description = "VileTech's level representation, ZDBSP fork, UDMF support"
homepage = "https://github.com/jerome-trc/viletech/tree/master/level"
keywords = ["doom", "gamedev", "udmf", "viletech", "zdbsp"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[features]
default = []
ser_de = ["serde", "bitflags/serde"]

[dependencies]
util = { package = "viletech-utils", path = "../utils" }

bitflags.workspace = true
bitvec.workspace = true
bytemuck.workspace = true
glam.workspace = true
logos.workspace = true # For UDMF parsing.
once_cell.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
