[package]
name = "lithica"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["compilers", "game-development"]
description = "Performant scripting language with powerful compile-time metaprogramming"
homepage = "https://github.com/jerome-trc/viletech/tree/master/lith"
keywords = ["compiler", "doom", "dsl", "gamedev", "scripting"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[dependencies]
doomfront = { path = "../doomfront" } # Only used for its parsing code.
util = { package = "viletech-utils", path = "../utils" }

ariadne.workspace = true
bitflags.workspace = true
bitvec.workspace = true
bumpalo.workspace = true
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-interpreter.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
im.workspace = true
indexmap.workspace = true
logos.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

# All dependencies specified below are tentative.
backtrace = "0.3.69"
cee-scape = "0.1.6"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
