[package]
name = "lithica"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["compilers", "game-development"]
description = "Performant scripting language with powerful compile-time metaprogramming"
homepage = "https://github.com/jerome-trc/viletech/tree/master/lith"
keywords = ["compiler", "dsl", "gamedev", "jit", "scripting"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[features]
default = []
jit = ["dep:cranelift-jit"]

[dependencies]
# Only used for its parsing code.
doomfront = { path = "../doomfront" }
util = { package = "viletech-utils", path = "../utils" }

ariadne.workspace = true
bitflags.workspace = true
cranelift.workspace = true
cranelift-jit = { workspace = true, optional = true }
cranelift-module.workspace = true
crossbeam.workspace = true
logos.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

# All dependencies specified below are tentative.
backtrace = "0.3.69"
cee-scape = "0.1.6"
gc-arena = "0.4.0"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
