[package]
name = "lithscript"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["compilers", "game-development"]
description = "Fork of GZDoom's ZScript"
homepage = "https://github.com/jerome-trc/viletech/tree/master/lithscript"
keywords = ["compiler", "doom", "dsl", "viletech", "gamedev"]
license = "MIT OR Apache-2.0"
publish = false
repository.workspace = true

[features]
default = []
viletech = ["doomfront/zdoom", "vfs"]

[dependencies]
doomfront = { path = "../doomfront", features = ["serde"] }
util = { package = "viletech-utils", path = "../utils" }
vfs = { package = "viletech-fs", path = "../vfs", optional = true }

arc-swap.workspace = true
ariadne.workspace = true
bitflags.workspace = true
bitvec.workspace = true
cranelift.workspace = true
cranelift-interpreter.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
impl-trait-for-tuples.workspace = true
logos.workspace = true
parking_lot.workspace = true
peg.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
sharded-slab.workspace = true
smallvec.workspace = true
