[package]
name = "viletech-server"
version = "0.0.0"
edition = "2021"

authors = ["***REMOVED***"]
categories = ["games", "game-engines", "game-development"]
description = "Dedicated server for the VileTech Engine"
homepage = "https://github.com/***REMOVED***/viletech/"
keywords = ["bevy", "doom", "gamedev", "gzdoom", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/***REMOVED***/viletech/"

[dependencies]
vile = { path = "../engine", package = "viletech" }

bevy_quinnet = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
indoc = { workspace = true }
log = { workspace = true }
sha3 = { workspace = true }
