[package]
name = "viletech-server"
version = "0.0.0"
edition = "2021"

authors = ["The Rat Circus"]
categories = ["games", "game-engines", "game-development"]
description = "Dedicated server for the VileTech Engine"
homepage = "https://github.com/jerome-trc/viletech/"
keywords = ["bevy", "doom", "gamedev", "gzdoom", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository = "https://github.com/jerome-trc/viletech/"

[dependencies.bevy]
workspace = true
default-features = false
features = [
	# Default
	"bevy_asset",
	"bevy_scene",
	"filesystem_watcher",

	# Optional
	"serialize",

	"dynamic_linking", # Temporary.
]

[dependencies]
viletech = { path = "../engine" }

bevy_quinnet = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
indoc = { workspace = true }
sha3 = { workspace = true }
