[package]
name = "viletech-server"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["games", "game-engines", "game-development"]
description = "Dedicated server for the VileTech Engine"
homepage = "https://github.com/jerome-trc/viletech/tree/master/server"
keywords = ["bevy", "doom", "gamedev", "gzdoom", "viletech"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[dependencies.bevy]
workspace = true
default-features = false
features = [
	# Default
	"bevy_asset",
	"bevy_scene",

	# Optional
	"serialize",
]

[dependencies]
viletech = { package = "viletech-engine", path = "../engine" }

bevy_quinnet.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
clap.workspace = true
crossbeam.workspace = true
indoc.workspace = true
sha3.workspace = true
