[package]
name = "subterra"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["encoding", "game-development"]
description = "id Tech 1 (and adjacent) data representations"
homepage = "https://github.com/jerome-trc/viletech/tree/master/data"
keywords = ["doom", "encoding", "gamedev"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[features]
default = []
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
util = { package = "viletech-utils", path = "../utils" }

bitflags.workspace = true
bitvec.workspace = true
bytemuck.workspace = true
byteorder.workspace = true
glam.workspace = true
image.workspace = true
logos.workspace = true # For UDMF parsing.
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, optional = true }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
