[package]
name = "subterra"
version = "0.0.0"
edition.workspace = true

authors = ["jerome-trc"]
categories = ["encoding", "game-development"]
description = "id Tech 1 (and adjacent) data representations"
homepage = "https://github.com/jerome-trc/viletech/tree/master/data"
keywords = ["doom", "encoding", "gamedev"]
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true

[features]
default = []
acs = []
graphics = []
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
znbx-sys = { path = "../znbx" }
util = { package = "viletech-utils", path = "../utils" }

bitflags.workspace = true
bytemuck = { workspace = true, features = ["min_const_generics"] }
byteorder.workspace = true
logos.workspace = true # For UDMF parsing.
regex.workspace = true
serde = { workspace = true, optional = true }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion.workspace = true
